Fix alignment of text

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 html {
   background-color: #dbd6cf;
+  box-sizing:
+}
+
+body {
+
 }
 
 header {
@@ -7,8 +12,9 @@ header {
 }
 
 h1 {
-  font-family: 'Bevan', cursive;
+  font-family: "Bevan", cursive;
   color: #fff;
+  text-align: center;
 }
 
 li {
